--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,9 +17,10 @@ dependencies:
   # openidconnect_windows: ^0.0.6
   flutter_secure_storage: ^5.0.2
   jwt_decoder: ^2.0.1
-
+  freezed_annotation: ^2.1.0
   cryptography: ^2.0.5
-
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.1
   url_launcher: ^6.0.17
   http: ^0.13.4
   retry: ^3.1.0
